# FIRE

./: .gitignore  Personal_Finances.xlsx  README.md  fire.py  requirements.txt
Old_Project/: fire.py
fire_refactored/: README.md  config_example.yaml  pyproject.toml  streamlit_full.py
fire_refactored/finance/: __init__.py  loans.py  models.py  simulation.py  tax.py
fire_refactored/tests/: test_finance.py
